template/erabliereapi-emailimagesobserver-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: erabliereapi-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: <ca-name>
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  tls:
  - hosts:
    - <domain>
    secretName: tls-secret
  rules:
  - host: <domain>
    http:
      paths:
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: erabliere-api-service
            port:
              number: 80
      - path: /emailimagesobserver(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: emailimagesobserver-service
            port:
              number: 80
