template/erabliereapi-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: erabliereapi-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: <ca-name>
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  tls:
  - hosts:
    - <your-domain-prefix>.<your-location>.cloudapp.azure.com
    secretName: tls-secret
  rules:
  - host: <your-domain-prefix>.<your-location>.cloudapp.azure.com
    http:
      paths:
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: erabliereapi
            port:
              number: 80
